7/07/2004 version 1.2.8
- fixes for LaTeX versions of autoregressive models
- correct Spanish help strings
- fix font problem for some objects in session window
- fix for exporting time-series data to R version 1.9
- add option to export data to PcGive .dat format (thanks to
  Michal Kurcewicz)
- enable TRAMO analysis of annual time-series data
- Windows version: ensure user directory gets created!  This
  was broken in gretl 1.2.6 and 1.2.7, which could produce
  strange-seeming problems.
- hccm command: ensure that the F-stat shown for the model
  is based on the robust covariance matrix; also ensure
  the robust F-stat is used when robust standard errors are
  selected with the ols command
- add start-up option to dump gretl configuration to a text file
  ('-c' or '--dump')
- small fixes for nonlinear least squares
- Replace fixed IP address for database server with hostname
- Fix for copying from gretl windows using Ctrl-C on Windows
- Update Windows version to gtk 2.4.3 runtime
- add "restrict" command for general Wald test (not yet trans-
  lated, too new)

6/13/2004 version 1.2.7
- add Italian helpfiles (thanks to Cristian Rigamonti)
- update Spanish helpfiles 
- add start-up option "-e" or "--english" to force use of
  English strings when LANG would indicate translation
  (also recognize environment variable GRETL_LANG: if this
  is "english" or "C", run in English)
- allow for missing values (silent) in audio graphs
- add a few keystrokes to the main gretl window:
  'a': audio (read list of variables)
  'x': stop audio
  'e': edit attributes of current variable
  't': plot current variable
- make start-up tests for tramo and x12a less verbose
- fix bug in deletion of scalar variables from the dataset
- fix bug in built-in spreadsheet: clicking in a blank
  column could crash gretl 
- fix broken behavior of built-in spreadsheet for gtk
  2.0.X versions
- fix various bug and typos in documentation
- build tweaks for OS X