@@ -256,17 +256,15 @@ int ztox (int i, double *px, double **Z, const DATAINFO *pdinfo)
  * number of 1s in the series.
  */
 
-int isdummy (double *x, int t1, int t2)
+int isdummy (const double *x, int t1, int t2)
 {
     int t, m = 0;
-    double xx;
 
     for (t=t1; t<=t2; t++) {
-	xx = x[t];
-	if (floatneq(xx, 0.0) && floatneq(xx, 1.0)) {
+	if (floatneq(x[t], 0.0) && floatneq(x[t], 1.0)) {
 	    return 0;
 	}
-	if (floateq(xx, 1.0)) m++;
+	if (floateq(x[t], 1.0)) m++;
     }
 
     if (m < t2 - t1 + 1) return m;
