@@ -86,8 +86,10 @@ struct gretl_option gretl_opts[] = {
     { PLOT,     OPT_O, "one-scale" },
     { PRINT,    OPT_O, "byobs" },
     { PRINT,    OPT_T, "ten" },
+    { SMPL,     OPT_C, "cumulate" },    
     { SMPL,     OPT_O, "dummy" },
     { SMPL,     OPT_M, "no-missing" },
+    { SMPL,     OPT_N, "random" },
     { SMPL,     OPT_R, "restrict" },
     { SPEARMAN, OPT_O, "verbose" },
     { SQUARE,   OPT_O, "cross" },
